Remove String.isBlank usage